2002-11-03  Max Horn  <max@quendi.de>
	* audio/xmidi.cc, gumps/Actor_gump.cc, gumps/Paperdoll_gump.cc, gumps/Spellbook_gump.cc,
	  objs/objs.cc, usecode/useval.cc: CodeWarrior has snprintf incorrectly in std::
	* gumps/Spellbook_gump.cc: added 'using std::strcpy' for CodeWarrior
	* usecode/ucinternal.cc: added 'using std::abs' for CodeWarrior
	* tools/expack.cc: fixed compilation with Metrowerks CodeWarrior

2002-11-03  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* actors.cc: fixed division by zero

2002-11-01  Ryan Nunn <colourles@users.sourceforge.net>
	* imagewin/ibuf8.cc : Working round MSVC compiler bug.
	* msvcstuff/*.* : Version updates
	* AUTHORS, ChangeLog, data/credits.txt : Changing my email address

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* exult.spec.in, desktop/Makefile.am, mapedit/Makefile.am:
	updated for RH80, other minor packaging changes

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/Face_stats.cc: fixed division by zero
	* shapes/Makefile.am: new automakes don't support OMIT_DEPENDENCIES

2002-10-31  Jeff Freedman  <jeff@amy.nerble.net>

	* configure.in:  Version 1.00.

2002-10-31  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* shapes/font.cc: fixed hang in french BG

2002-10-10  Max Horn  <max@quendi.de>

	* synced with my recent (and some not so recent) changes to HEAD CVS:
	all of these are there to get exult to compile on MacOS X again

2002-09-29  Jeff Freedman  <jeff@amy.nerble.net>

	* actions.cc,pathfinder/*:  Integrated changes from 1.1x to fix
	start of Mtns. of Freedom bug.

2002-09-11  Dominik Reichardt  <dominus@users.sourceforge.net>
	* docs/xml/*.xml: updated and/or spellchecked
	* docs/*.html: updated and/or spellchecked
	* FAQ, ReadMe : updated and spellchecked

2002-08-02  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* gumps/*: backported unicode conversion for savegame gumps