@@ -385,6 +385,7 @@ void store_system_paths();
 void reset_system_paths();
 void clear_system_path(const std::string& key);
 void add_system_path(const std::string& key, const std::string& value);
+void clone_system_path(const std::string& new_key, const std::string& old_key);
 std::string get_system_path(const std::string &path);
 
 void to_uppercase(std::string &str);
